# fastapi_tutorial

./: .gitignore  README.md  books.py  books2.py  pyproject.toml
TodoApp/: alembic.ini  database.py  main.py  models.py
TodoApp/routers/: admin.py  auth.py  todos.py  users.py
TodoApp/templates/: home.html  layout.html  login.html  register.html
TodoApp/test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
todo_app/: database.py  main.py  models.py  todoapp.db
todo_app/alembic/versions/: d593096dcd02_create_phone_number.py
todo_app/routers/: admin.py  auth.py  todos.py  users.py
todo_app/templates/: home.html
