[project]
name = "fastapienv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "dotenv",
    "sqlalchemy",
    "passlib",
    "bcrypt==4.0.1",
    "python-multipart",
    "python-jose[cryptography]",
    "pymysql",
    "alembic",
    "aiofiles",
    "jinja2",
    "httpx",
    "pytest",
    "pytest-asyncio"
]